<resources>
    <string name="app_name">GreenElf</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="nav_home">Home</string>
    <string name="nav_find">Find</string>
    <string name="nav_alarm">Alarm</string>
    <string name="nav_intro">Profile</string>
    <string name="nav_menu">Menu</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="click">Capture</string>
    <string name="todo">Camera Capture</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="imageDesc">captured image</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
